feat: implement StudentService layer and create administrative dashboard UI